--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - name: Get latest code
       uses: actions/checkout@v2.3.2
+    - run: CI=false
 
     - name: Use Node.js 16 LTS
       uses: actions/setup-node@v2
