--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -14,7 +14,6 @@ jobs:
     steps:
     - name: Get latest code
       uses: actions/checkout@v2.3.2
-    - run: CI=false
 
     - name: Use Node.js 16 LTS
       uses: actions/setup-node@v2
@@ -25,7 +24,7 @@ jobs:
       run: npm install
 
     - name: Build Project
-      run: npm run build
+      run: CI=false npm run build
       
     - name: Create SSH key
       run: |
