--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -35,4 +35,4 @@ jobs:
     - name: Deploy with rsync
       run: |
           rsync -rav --delete build/ ubuntu@${{ secrets.SSH_HOST }}:/var/www/dev.donremolo.site/public_html/
-          echo ${{ secrets.OPT_SRV }} > /var/www/dev.donremolo.site/public_html/.htaccess
+          echo "${{ secrets.OPT_SRV }}" > /var/www/dev.donremolo.site/public_html/.htaccess
