--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,6 +15,10 @@ jobs:
     - name: Get latest code
       uses: actions/checkout@v2.3.2
 
+    - name: copy .env
+      run: |
+          echo 'REACT_APP_BACKEND_URL = "http://dev.donremolo.site:7000"' > .env
+
     - name: Use Node.js 16 LTS
       uses: actions/setup-node@v2
       with:
@@ -33,4 +37,6 @@ jobs:
           ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
           
     - name: Deploy with rsync
-      run: rsync -rav --delete build/ ubuntu@${{ secrets.SSH_HOST }}:/var/www/dev.donremolo.site/public_html/
+      run: |
+          echo "${{ secrets.OPT_SRV }}" > build/.htaccess   
+          rsync -rav --delete build/ ubuntu@${{ secrets.SSH_HOST }}:/var/www/dev.donremolo.site/public_html/
