--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-REACT_APP_BACKEND_URL = "http://donremolo.site:8000"
-=======
-REACT_APP_BACKEND_URL = "http://donremolo.site:7000"
->>>>>>> dev
+REACT_APP_BACKEND_URL = "http://donremolo.site:/7000"
