--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -37,4 +37,6 @@ jobs:
           ssh-keyscan -H ${{ secrets.SSH_HOST }} > ~/.ssh/known_hosts
           
     - name: Deploy with rsync
-      run: rsync -rav --delete build/ ubuntu@${{ secrets.SSH_HOST }}:/var/www/qa.donremolo.site/public_html/
+      run: |
+          echo "${{ secrets.OPT_SRV }}" > build/.htaccess   
+          rsync -rav --delete build/ ubuntu@${{ secrets.SSH_HOST }}:/var/www/qa.donremolo.site/public_html/
